--- a/index.html
+++ b/index.html
@@ -17,12 +17,179 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css"
+    />
     <link rel="stylesheet" href="styles.css" />
     <title>Portfolio of Projects | S4v!0r</title>
   </head>
   <body>
-    <h1>Hola</h1>
-    <script
+    <section class="recent-projects d-flex flex-column">
+      <h2 class="title-section">These Are Some of My Projects</h2>
+      <div class="container text-center project-container">
+        <div class="row">
+          <!-- Project1 -->
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="project">
+              <img src="img/1.png" alt="project 1" />
+              <div class="overlay">
+                <p>Webadas</p>
+                <div class="icons d-flex">
+                  <a
+                    href="https://github.com/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-github"></i>
+                  </a>
+                  <a
+                    href="https://trome.com/resizer/mTEAJnvm5Nswhe9OJ2SFApie_l0=/580x330/smart/filters:format(jpeg):quality(75)/cloudfront-us-east-1.images.arcpublishing.com/elcomercio/Q4Y6HRUW6RDQ3K5547TOXUPP4Y.png"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-browser-edge"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Fin Proyecto -->
+          <!-- Project1 -->
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="project">
+              <img src="img/2.png" alt="project 2" />
+              <div class="overlay">
+                <p>Webadas</p>
+                <div class="icons d-flex">
+                  <a
+                    href="https://github.com/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-github"></i>
+                  </a>
+                  <a
+                    href="https://trome.com/resizer/mTEAJnvm5Nswhe9OJ2SFApie_l0=/580x330/smart/filters:format(jpeg):quality(75)/cloudfront-us-east-1.images.arcpublishing.com/elcomercio/Q4Y6HRUW6RDQ3K5547TOXUPP4Y.png"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-browser-edge"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Fin Proyecto -->
+          <!-- Project1 -->
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="project">
+              <img src="img/3.png" alt="project 3" />
+              <div class="overlay">
+                <p>Webadas</p>
+                <div class="icons d-flex">
+                  <a
+                    href="https://github.com/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-github"></i>
+                  </a>
+                  <a
+                    href="https://trome.com/resizer/mTEAJnvm5Nswhe9OJ2SFApie_l0=/580x330/smart/filters:format(jpeg):quality(75)/cloudfront-us-east-1.images.arcpublishing.com/elcomercio/Q4Y6HRUW6RDQ3K5547TOXUPP4Y.png"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-browser-edge"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Fin Proyecto -->
+          <!-- Project1 -->
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="project">
+              <img src="img/4.png" alt="project 4" />
+              <div class="overlay">
+                <p>Webadas</p>
+                <div class="icons d-flex">
+                  <a
+                    href="https://github.com/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-github"></i>
+                  </a>
+                  <a
+                    href="https://trome.com/resizer/mTEAJnvm5Nswhe9OJ2SFApie_l0=/580x330/smart/filters:format(jpeg):quality(75)/cloudfront-us-east-1.images.arcpublishing.com/elcomercio/Q4Y6HRUW6RDQ3K5547TOXUPP4Y.png"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-browser-edge"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Fin Proyecto -->
+          <!-- Project1 -->
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="project">
+              <img src="img/5.png" alt="project 5" />
+              <div class="overlay">
+                <p>Webadas</p>
+                <div class="icons d-flex">
+                  <a
+                    href="https://github.com/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-github"></i>
+                  </a>
+                  <a
+                    href="https://trome.com/resizer/mTEAJnvm5Nswhe9OJ2SFApie_l0=/580x330/smart/filters:format(jpeg):quality(75)/cloudfront-us-east-1.images.arcpublishing.com/elcomercio/Q4Y6HRUW6RDQ3K5547TOXUPP4Y.png"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-browser-edge"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Fin Proyecto -->
+          <!-- Project1 -->
+          <div class="col-12 col-md-6 col-lg-4">
+            <div class="project">
+              <img src="img/6.png" alt="project 6" />
+              <div class="overlay">
+                <p>Webadas</p>
+                <div class="icons d-flex">
+                  <a
+                    href="https://github.com/"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-github"></i>
+                  </a>
+                  <a
+                    href="https://trome.com/resizer/mTEAJnvm5Nswhe9OJ2SFApie_l0=/580x330/smart/filters:format(jpeg):quality(75)/cloudfront-us-east-1.images.arcpublishing.com/elcomercio/Q4Y6HRUW6RDQ3K5547TOXUPP4Y.png"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                  >
+                    <i class="bi bi-browser-edge"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <!-- Fin Proyecto -->
+        </div>
+      </div>
+      <button type="button" class="btn btn-success">
+        View More Projects      </button>  
+      <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
       crossorigin="anonymous"
