navbar cambiada de posicion

--- a/portfoliov2/index.html
+++ b/portfoliov2/index.html
@@ -35,85 +35,88 @@
         </section>
       </main>
 
-      <aside class="aside__content">
-        <!-- General info -->
-        <section class="aside__user-info">
-          <div class="user-info__general">
-            <div class="user-info__container-img">
-              <img
-                class="user-info__avatar"
-                src="./assets/img/photo.jpg"
-                alt="Avatar"
-              />
+      <div class="user">
+        <nav class="user-info__navbar">
+          <ul class="navbar__list">
+            <li class="navbar__item">
+              <a href="index.html" class="navbar__link"
+                ><span class="navbar__overlay">Home</span>
+                <i class="navbar__link--a bi bi-house-door"></i
+              ></a>
+            </li>
+            <li class="navbar__item">
+              <a href="about-me.html" class="navbar__link"
+                ><span class="navbar__overlay">About me</span
+                ><i class="navbar__link--a bi bi-person-badge-fill"></i
+              ></a>
+            </li>
+            <li class="navbar__item">
+              <a href="skills.html" class="navbar__link"
+                ><span class="navbar__overlay">Skills</span
+                ><i class="navbar__link--a bi bi-code-slash"></i
+              ></a>
+            </li>
+            <li class="navbar__item">
+              <a href="projects.html" class="navbar__link"
+                ><span class="navbar__overlay">Projects</span
+                ><i class="navbar__link--a bi bi-columns-gap"></i
+              ></a>
+            </li>
+            <li class="navbar__item">
+              <a href="contact.html" class="navbar__link"
+                ><span class="navbar__overlay">Contact</span
+                ><i class="navbar__link--a bi bi-chat-dots-fill"></i
+              ></a>
+            </li>
+          </ul>
+        </nav>
+
+        <aside class="aside__content">
+          <!-- General info -->
+          <section class="aside__user-info">
+            <div class="user-info__general">
+              <div class="user-info__container-img">
+                <img
+                  class="user-info__avatar"
+                  src="./assets/img/photo.jpg"
+                  alt="Avatar"
+                />
+              </div>
+              <h2 class="user-info__name">Eder Benites</h2>
+              <h3 class="user-info__profession">Frontend Developer</h3>
             </div>
-            <h2 class="user-info__name">Eder Benites</h2>
-            <h3 class="user-info__profession">Frontend Developer</h3>
-          </div>
 
-          <nav class="user-info__navbar">
-            <ul class="navbar__list">
-              <li class="navbar__item">
-                <a href="index.html" class="navbar__link"
-                  ><span class="navbar__overlay">Home</span>
-                  <i class="navbar__link--a bi bi-house-door"></i
-                ></a>
-              </li>
-              <li class="navbar__item">
-                <a href="about-me.html" class="navbar__link"
-                  ><span class="navbar__overlay">About me</span
-                  ><i class="navbar__link--a bi bi-person-badge-fill"></i
-                ></a>
-              </li>
-              <li class="navbar__item">
-                <a href="skills.html" class="navbar__link"
-                  ><span class="navbar__overlay">Skills</span
-                  ><i class="navbar__link--a bi bi-code-slash"></i
-                ></a>
-              </li>
-              <li class="navbar__item">
-                <a href="projects.html" class="navbar__link"
-                  ><span class="navbar__overlay">Projects</span
-                  ><i class="navbar__link--a bi bi-columns-gap"></i
-                ></a>
-              </li>
-              <li class="navbar__item">
-                <a href="contact.html" class="navbar__link"
-                  ><span class="navbar__overlay">Contact</span
-                  ><i class="navbar__link--a bi bi-chat-dots-fill"></i
-                ></a>
-              </li>
-            </ul>
-          </nav>
+            <div class="user-info__social">
+              <ul class="user-info__social--options">
+                <li class="user-info__social--link">
+                  <a class="social__link" href=""
+                    ><i class="bi bi-linkedin"></i
+                  ></a>
+                </li>
+                <li class="user-info__social--link">
+                  <a class="social__link" href=""
+                    ><i class="bi bi-signal"></i
+                  ></a>
+                </li>
+              </ul>
+            </div>
 
-          <div class="user-info__social">
-            <ul class="user-info__social--options">
-              <li class="user-info__social--link">
-                <a class="social__link" href=""
-                  ><i class="bi bi-linkedin"></i
-                ></a>
-              </li>
-              <li class="user-info__social--link">
-                <a class="social__link" href=""><i class="bi bi-signal"></i></a>
-              </li>
-            </ul>
-          </div>
+            <!-- cv -->
+            <div class="user-info__button">
+              <a href="" class="user-info__button--link"
+                ><i class="bi bi-download"></i>Download CV</a
+              >
+            </div>
 
-          <!-- cv -->
-          <div class="user-info__button">
-            <a href="" class="user-info__button--link"
-              ><i class="bi bi-download"></i>Download CV</a
-            >
-          </div>
-
-          <!-- Footer -->
-          <footer class="user-info__footer">
-            <p class="footer__text">
-              Made with <i class="bi bi-heart-fill"></i> by Eder Benites
-            </p>
-          </footer>
-
-        </section>
-      </aside>
+            <!-- Footer -->
+            <footer class="user-info__footer">
+              <p class="footer__text">
+                Made with <i class="bi bi-heart-fill"></i> by Eder Benites
+              </p>
+            </footer>
+          </section>
+        </aside>
+      </div>
     </div>
   </body>
 </html>
