Main section complete and it have a spaghetti code. I will refactor it later.

--- a/portfoliov3/index.html
+++ b/portfoliov3/index.html
@@ -47,9 +47,9 @@
               </div>
             </div>
           </div>
-          <div class="block__image">
-            <img src="src/img/me.jpg" alt="me" />
-          </div>
+        </div>
+        <div class="block block__image">
+          <img src="src/img/me.jpg" alt="me" />
         </div>
         <div class="block block--location">
           <p class="text-gradient">Perú 🇵🇪</p>
@@ -80,6 +80,21 @@
           <div class="block--img">
             <img src="src/img/china.png" alt="china" />
           </div>
+        </div>
+        <div class="block">
+          <div class="block--img">
+            <img src="src/img/sudio.png" alt="china" />
+          </div>
+        </div>
+        <div class="block hour">
+          <p>00:55 a. m.</p>
+        </div>
+        <div class="block">
+          <p class="text-gradient">Saturday</p>
+          <p>November 25, 2023</p>
+        </div>
+        <div class="block">
+
         </div>
       </div>
     </main>
